--- a/index.html
+++ b/index.html
@@ -196,11 +196,13 @@
                                 let correct = codes[names.indexOf(current)];
                                 let cPath = document.querySelector(`path[id^='${correct}']`);
                                 if (cPath) cPath.classList.add("highlight");
-                                /*let randomIndex = Math.floor(Math.random() * left.length);
+alert(left.length);
+                                let randomIndex = Math.floor(Math.random() * left.length);
 
                                 left.splice(randomIndex, 0, current);
 
-                                localStorage.setItem("left", JSON.stringify(left));*/
+                                localStorage.setItem("left", JSON.stringify(left));
+alert(left.length);
                                 setTimeout(() => {
                                     cPath.classList.remove("highlight");
                                     combo = 0;
