--- a/test-game/index.html
+++ b/test-game/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="app">
+        <button onclick="window.location.href='index.html'">Volver al índice</button>
         <h1>Juego de Tests</h1>
         <div id="exam-list"></div>
         <button id="load-exams">Cargar Exámenes</button>
