--- a/test-game/index.html
+++ b/test-game/index.html
@@ -4,24 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juego de Exámenes</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="test-game/style.css">
 </head>
 <body>
-    <h1 id="exam-title">Selecciona un examen</h1>
-
+    <h1>Bienvenido al Juego de Exámenes</h1>
     <div id="exam-list">
+        <h2>Selecciona un Examen</h2>
         <button id="load-exams">Cargar Exámenes</button>
+        <div id="exam-buttons"></div>
     </div>
 
     <div id="quiz-container" class="hidden">
-        <h2 id="question-text"></h2>
+        <h2 id="exam-title"></h2>
+        <p id="question-text"></p>
         <div id="options"></div>
+        <div id="results" class="hidden"></div>
     </div>
 
-    <div id="results" class="hidden"></div>
-
-    <a href="../index.html">Volver al índice</a>
-
-    <script src="script.js"></script>
+    <script src="test-game/script.js"></script>
 </body>
 </html>
