--- a/test-game/index.html
+++ b/test-game/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juego de Exámenes</title>
-    <link rel="stylesheet" href="test-game/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Bienvenido al Juego de Exámenes</h1>
@@ -20,6 +20,6 @@
         <div id="results" class="hidden"></div>
     </div>
 
-    <script src="test-game/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
