--- a/test-game/index.html
+++ b/test-game/index.html
@@ -3,28 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trivia APC de Madrid</title>
+    <title>Test Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="home">
+        <h1>Bienvenido al Test Game</h1>
+        <button onclick="window.location.href='exams.html'">Ver Exámenes</button>
+        <div id="history"></div>
+    </div>
 
-    <div id="main-container">
+    <div id="exam-list" class="hidden">
+        <h1>Lista de Exámenes</h1>
+        <div id="exam-buttons"></div>
+        <button onclick="window.location.href='index.html'">Volver al Inicio</button>
+    </div>
+
+    <div id="quiz-container" class="hidden">
         <h1 id="exam-title"></h1>
+        <p id="question-text"></p>
+        <div id="options"></div>
+        <button onclick="window.location.href='exams.html'">Volver a la Lista</button>
+    </div>
 
-        <!-- Contenedor de la lista de exámenes -->
-        <div id="exam-list">
-            <h2>Selecciona un examen:</h2>
-            <div id="exam-buttons"></div>
-        </div>
-
-        <!-- Contenedor del cuestionario -->
-        <div id="quiz-container" class="hidden">
-            <p id="question-text"></p>
-            <div id="options"></div>
-        </div>
-
-        <!-- Resultados -->
-        <div id="results" class="hidden"></div>
+    <div id="results" class="hidden">
+        <h2>Resultados</h2>
+        <p id="score"></p>
+        <button id="review-btn">Revisar Examen</button>
+        <button onclick="window.location.href='exams.html'">Volver a la Lista</button>
+        <div id="review-section" class="hidden"></div>
     </div>
 
     <script src="script.js"></script>
