--- a/test-game/index.html
+++ b/test-game/index.html
@@ -10,30 +10,51 @@
 <body>
     <header>
         <h1>Test Game</h1>
-        <p>Elige un examen y pon a prueba tus conocimientos.</p>
+        <p>Herramienta profesional para aprendizaje y práctica</p>
     </header>
 
     <main>
-        <!-- Lista de exámenes -->
+        <!-- Lista de categorías/exámenes -->
         <section id="exam-list" class="visible">
-            <h2>Selecciona un examen</h2>
-            <select id="category-select" aria-label="Categoría de examen"></select>
+            <h2>Selecciona una categoría</h2>
+            <select id="category-select" aria-label="Seleccionar categoría">
+                <option value="" disabled selected>Elige una categoría</option>
+            </select>
             <div id="exam-buttons"></div>
         </section>
 
-        <!-- Contenedor del cuestionario -->
-        <section id="quiz-container" class="hidden">
-            <h2 id="exam-title"></h2>
-            <p id="question-text"></p>
-            <div id="options"></div>
-            <button id="back-to-list">Volver a la lista</button>
+        <!-- Lista de intentos -->
+        <section id="attempts-list" class="hidden">
+            <h2 id="test-title"></h2>
+            <div id="attempts-buttons"></div>
+            <button id="back-to-tests">Volver a exámenes</button>
         </section>
 
-        <!-- Resultados -->
-        <section id="results" class="hidden"></section>
+        <!-- Contenedor del examen -->
+        <section id="quiz-container" class="hidden">
+            <h2 id="quiz-title"></h2>
+            <p id="question-text"></p>
+            <div id="options"></div>
+            <button id="next-question">Siguiente pregunta</button>
+            <button id="exit-quiz">Salir del examen</button>
+        </section>
+
+        <!-- Revisión de intentos -->
+        <section id="review-container" class="hidden">
+            <h2>Revisión de intento</h2>
+            <div id="review-content"></div>
+            <button id="back-to-attempts">Volver a intentos</button>
+        </section>
 
         <!-- Loader -->
         <div id="loader"></div>
+
+        <!-- Diálogo de confirmación -->
+        <dialog id="exit-dialog">
+            <p>¿Estás seguro de que deseas salir del examen?</p>
+            <button id="confirm-exit">Sí, salir</button>
+            <button id="cancel-exit">Cancelar</button>
+        </dialog>
     </main>
 
     <footer>
