Actualizar index.html

--- a/test-game/index.html
+++ b/test-game/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <main>
-        <!-- Sección principal de categorías -->
+        <!-- Lista de categorías -->
         <section id="exam-list" class="visible">
             <h2>Selecciona una categoría</h2>
             <select id="category-select">
@@ -34,6 +34,7 @@
             <h2 id="quiz-title"></h2>
             <p id="question-text"></p>
             <div id="options"></div>
+            <button id="previous-question">Pregunta anterior</button>
             <button id="next-question">Siguiente pregunta</button>
             <button id="exit-quiz">Salir del examen</button>
         </section>
