--- a/test-game/index.html
+++ b/test-game/index.html
@@ -33,7 +33,7 @@
         <section id="quiz-container" class="hidden">
             <h2 id="quiz-title"></h2>
             <p id="question-text"></p>
-            <div id="options"></div>
+            <div id="options" class="radio-options"></div>
             <button id="previous-question">Pregunta anterior</button>
             <button id="next-question">Siguiente pregunta</button>
             <button id="exit-quiz">Salir del examen</button>
