--- a/test-game/index.html
+++ b/test-game/index.html
@@ -31,8 +31,7 @@
             <h2 id="quiz-title"></h2>
             <p id="question-text"></p>
             <div id="options" class="radio-options"></div>
-            <button id="previous-question">Pregunta anterior</button>
-            <button id="next-question">Siguiente pregunta</button>
+            <div id="nav-buttons"></div>
             <button id="exit-quiz">Salir del examen</button>
         </section>
 
