--- a/test-game/index.html
+++ b/test-game/index.html
@@ -24,7 +24,7 @@
         <section id="attempts-list" class="hidden">
             <h2 id="test-title"></h2>
             <div id="attempts-buttons"></div>
-            <button id="back-to-tests">Volver a exámenes</button>
+            <button id="back-to-tests">Volver atrás</button>
         </section>
 
         <section id="quiz-container" class="hidden">
@@ -38,15 +38,17 @@
         <section id="review-container" class="hidden">
             <h2>Revisión de intento</h2>
             <div id="review-content"></div>
-            <button id="back-to-attempts">Volver a intentos</button>
+            <button id="back-to-attempts">Volver atrás</button>
         </section>
 
         <div id="loader"></div>
 
         <dialog id="exit-dialog">
             <p>¿Estás seguro de que deseas salir del examen?</p>
-            <button id="confirm-exit">Sí, salir</button>
-            <button id="cancel-exit">Cancelar</button>
+            <div>
+                <button id="confirm-exit">Aceptar</button>
+                <button id="cancel-exit">Cancelar</button>
+            </div>
         </dialog>
     </main>
 
