--- a/test-game/index.html
+++ b/test-game/index.html
@@ -36,7 +36,7 @@
         </section>
 
         <section id="review-container" class="hidden">
-            <h2>Revisión de intento</h2>
+            <h2>Revisión de intento <span id="review-stats"></span></h2>
             <div id="review-content"></div>
             <button id="back-to-attempts">Volver atrás</button>
         </section>
