--- a/test-game/index.html
+++ b/test-game/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <section id="exam-list" class="visible">
-            <h2>Selecciona una categoría</h2>
+            <h2 class="title">Selecciona una categoría</h2>
             <select id="category-select">
                 <option value="" disabled selected>Elige una categoría</option>
             </select>
@@ -17,13 +17,13 @@
         </section>
 
         <section id="attempts-list" class="hidden">
-            <h2 id="test-title"></h2>
+            <h2 class="title"></h2>
             <div id="attempts-buttons"></div>
             <button id="back-to-tests">Volver atrás</button>
         </section>
 
         <section id="quiz-container" class="hidden">
-            <h2 id="quiz-title"></h2>
+            <h2 class="title"></h2>
             <p id="question-text"></p>
             <div id="options" class="radio-options"></div>
             <div id="nav-buttons"></div>
@@ -31,7 +31,7 @@
         </section>
 
         <section id="review-container" class="hidden">
-            <h2>Revisión de intento <span id="review-stats"></span></h2>
+            <h2 class="title">Revisión de intento <span id="review-stats"></span></h2>
             <div id="review-content"></div>
             <button id="back-to-attempts">Volver atrás</button>
         </section>
