--- a/test-game/index.html
+++ b/test-game/index.html
@@ -17,13 +17,13 @@
         </section>
 
         <section id="attempts-list" class="hidden">
-            <h2 class="title"></h2>
+            <h2 id="test-title" class="title"></h2>
             <div id="attempts-buttons"></div>
             <button id="back-to-tests">Volver atrás</button>
         </section>
 
         <section id="quiz-container" class="hidden">
-            <h2 class="title"></h2>
+            <h2 id="quiz-title" class="title"></h2>
             <p id="question-text"></p>
             <div id="options" class="radio-options"></div>
             <div id="nav-buttons"></div>
