--- a/apc-madrid/index.html
+++ b/apc-madrid/index.html
@@ -120,10 +120,10 @@
         }
         
         function reset() {
-            score = 0;
-            combo = 0;
-            localStorage.setItem("score", score);
-            localStorage.setItem("combo", combo);
+            /*score = 0;
+            combo = 0;*/
+            localStorage.setItem("score", score = 0);
+            localStorage.setItem("combo", combo = 0);
             left = [...names].sort(() => Math.random() - 0.5);
             document.getElementById("score").innerText = score;
             document.getElementById("combo").innerText = combo;
