--- a/apc-madrid/index.html
+++ b/apc-madrid/index.html
@@ -24,8 +24,8 @@
         <h2 id="question">Cargando...</h2>
         <p>Puntuación: <span id="score">0</span> | Aciertos seguidos: <span id="combo">0</span></p>
         <button onclick="toggleDarkMode()">🌙 Modo oscuro</button>
-        <button onclick="reset()">Reset</button>
-        <button onclick="goHome()"> Salir</button>
+        <button onclick="reset()">♻️ Reset</button>
+        <button onclick="goHome()">🏠 Salir</button>
     </div>
     <div id="map-container"></div>
     <p id="logro" class="hidden">🏆 ¡Logro desbloqueado!</p>
