--- a/apc-madrid/index.html
+++ b/apc-madrid/index.html
@@ -25,7 +25,7 @@
         <p>Puntuación: <span id="score">0</span> | Aciertos seguidos: <span id="combo">0</span></p>
         <button onclick="toggleDarkMode()">🌙 Modo oscuro</button>
         <button onclick="reset()">♻️ Reset</button>
-        <button onclick="goHome()">🏠 Salir</button>
+        <button onclick="window.location.href='../index.html'">🏠 Salir</button>
     </div>
     <div id="map-container"></div>
     <p id="logro" class="hidden">🏆 ¡Logro desbloqueado!</p>
@@ -64,10 +64,6 @@
 
         document.getElementById("score").innerText = score;
         document.getElementById("combo").innerText = combo;
-
-        function goHome() {
-            window.location.href = "../index.html";
-        }
 
         function adjustMapSize() {
             let svg = document.querySelector("#map-container svg");
