--- a/index.html
+++ b/index.html
@@ -3,14 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juegos de Trivia</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Cartilla Taxi Madrid</title>
+    <style>
+        #main-menu {
+            text-align: center;
+            margin-top: 50px;
+        }
+        button {
+            display: block;
+            width: 200px;
+            margin: 0.3rem auto;
+            padding: 0.3rem;
+            font-size: 18px;
+        }
+    </style>
 </head>
 <body>
     <div id="main-menu">
-        <h1>Juegos de Trivia</h1>
+        <h1>Cartilla Taxi Madrid</h1>
         <button onclick="window.location.href='apc-madrid/index.html'">Trivia APC Madrid</button>
-        <button onclick="window.location.href='test-game/index.html'">Juego de Tests</button>
+        <button onclick="window.location.href='test-game/index.html'">Tests</button>
     </div>
 </body>
 </html>
