--- a/apc-madrid/index.html
+++ b/apc-madrid/index.html
@@ -6,6 +6,7 @@
     <title>Trivia APC Madrid</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <style>
+        * { margin: 0.5rem 0; }
         body { font-family: Arial, sans-serif; text-align: center; background: #f4f4f4; transition: background 0.3s; }
         .dark-mode { background: #222; color: #fff; }
         svg { max-width: 100%; max-height: 100%; width: auto; height: auto; }
