--- a/test-game/index.html
+++ b/test-game/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <main>
+        <button class="btn-float" title="Salir">🏠</button>
         <section id="exam-list" class="visible">
             <h2 id="category-title">Selecciona una categoría</h2>
             <select id="category-select">
