--- a/test-game/index.html
+++ b/test-game/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <button id="home-button" class="btn-float" onclick="window.location.href='../index.html'" title="Salir">🏠</button>
-        <section id="exam-list" class="visible">
+        <section id="exam-list">
             <h2 id="category-title">Selecciona una categoría</h2>
             <select id="category-select">
                 <option value="" disabled selected>Elige una categoría</option>
